# fzVideoPlayer

./: CMakeLists.txt  CustomSlider.cpp  CustomSlider.h  README.md  VideoCtl.cpp  ctrlbar.cpp  ctrlbar.h  data.h  fzVideoPlayer.qrc  globalhelper.cpp  globalhelper.h  main.cpp  mainwindow.cpp  mainwindow.h  medialist.cpp  medialist.h  playlist.cpp  playlist.h  show.cpp  show.h  sonic.h  title.cpp  title.h  videoctl.h
lib/ffmpeg4.4.2/include/libavutil/: ffversion.h
lib/ffmpeg4.4.2/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
res/: menu.json
res/qss/: ctrlbar.css  mainwid.css  playlist.css  show.css  title.css
